fixed: OC: Form Printing adding page breaks in the middle of an item(#463)

--- a/app/views/styles/component/_print-oc.scss
+++ b/app/views/styles/component/_print-oc.scss
@@ -114,3 +114,16 @@
 .btn-dn {
     display: none;
 }
+
+.or {
+    
+    &:not(.print-relevant-only) section.question.or-branch.disabled, 
+    &:not(.print-relevant-only) section.or-branch.disabled {
+        display: table;
+    }
+    
+    fieldset.question {
+        display: table-cell;
+    }
+
+}
